--- a/styles.css
+++ b/styles.css
@@ -4,4 +4,15 @@
 	justify-content:space-between;
 	flex-wrap:wrap;
 }
+.box-1{
+	width:100px;
+	height:100px;
+	background:green;
+}
+.box-2{
+	background:red;
+}
+.box-2{
+	background:blue;
+}
 /* Your CSS Code here. */
